# ESSource

./: CMakeLists.txt  README.md
include/esmath/: vec.hpp
source/: CMakeLists.txt
source/math/: vec2.cpp  vec3.cpp  vec4.cpp
test/: CMakeLists.txt  main.cpp
