cmake_minimum_required(VERSION 3.1)

set(PROJECT_NAME "ES engine")
set(PROJECT_VERSION "0.1.0")

project(${PROJECT_NAME} VERSION ${PROJECT_VERSION} LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

set(ES_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include")

# Library
add_subdirectory(source)

# Tests
add_subdirectory(test)